Fix CSS Overflow

--- a/client/src/styles/Dashboard.module.css
+++ b/client/src/styles/Dashboard.module.css
@@ -70,6 +70,6 @@
 
 @media (width<=800px) {
     .dashboard-item {
-        width: 180px;
+        width: 160px;
     }
 }
